tests/fixtures/invalid/pow_none_float_str.py
# Cannot call pow() with None, Float, Str
x = pow(None, 1.0, "hello")
